# Generated by Django 5.2.14 on 2026-06-16 04:23
""" Email template model """

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="EmailTemplate",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("name", models.CharField(max_length=150, unique=True)),
                ("subject_template", models.TextField()),
                ("body_template", models.TextField()),
                (
                    "body_format",
                    models.CharField(
                        choices=[("text", "Text"), ("html", "HTML")],
                        default="text",
                        max_length=10,
                    ),
                ),
                ("required_variables", models.JSONField(blank=True, default=list)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
            ],
            options={
                "ordering": ["name"],
            },
        ),
    ]
